remote/argocd/ci-runners/oresoftware/bridge/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gha-clone-server
  namespace: default
  labels:
    app: gha-clone-server
spec:
  selector:
    app: gha-clone-server
  ports:
    - name: http
      port: 8117
      targetPort: http
